dataset1235/2025-2/610742602/users/1362015512/executions/906907063_3788368433.log
== RUN (2025-08-19 21:34:28)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:56)
-- CODE: 
nome="evelyn"
print(input(nome))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
evelynGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
evelynDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
evelynPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
evelynAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
evelynTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:35:21)
-- CODE: 
nome="evelyn"
print(input(nome))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
evelynGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
evelynDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
evelynPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
evelynAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
evelynTeste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:27)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:29)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:32:50)
-- CODE: 
string= "evelyn e elis"
input(string)
# Leitura de valores de entrada
var = 

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:26)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:20)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:34:28)
-- CODE: 
nome="evelyn"
print(nome.input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome.input())
          ^^^^^^^^^^
AttributeError: 'str' object has no attribute 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
